add Webhook Command and Response.